--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/joujiahe/ng-color-picker"
+    "url": "https://github.com/cycojesus/ng-color-picker"
   },
   "resolutions": {
     "angular": "1.2.0"
